Fixed section alignment.

--- a/less/agency.less
+++ b/less/agency.less
@@ -230,13 +230,14 @@ section {
 		margin-bottom: 75px;
     }
 }
-/*
+
 @media(min-width:768px) {
 	section {
-		padding: 150px 0;
+		padding: 65px 0;
+		height: 100vh;
 	}
 }
-*/
+
 // Services Section
 
 .service-heading {
